# wal-distributed-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/wal-core/: Cargo.toml
crates/wal-core/benches/: wal_bench.rs
crates/wal-core/src/: checkpoint.rs  entry.rs  error.rs  lib.rs  segment.rs  wal.rs
crates/wal-core/tests/: integration_test.rs
crates/wal-replication/: Cargo.toml  build.rs
crates/wal-replication/proto/: wal.proto
crates/wal-replication/src/: config.rs  error.rs  lib.rs  persistent_state.rs  proto.rs  server.rs
crates/wal-replication/src/raft/: log.rs  mod.rs  node.rs  snapshot.rs
crates/wal-replication/tests/: cluster_test.rs  compaction_test.rs
crates/wal-server/: Cargo.toml
crates/wal-server/src/: main.rs
