[package]
name = "wal-replication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Raft-based distributed replication layer for wal-core"

[dependencies]
wal-core   = { path = "../wal-core" }
thiserror.workspace  = true
tokio.workspace      = true
tonic.workspace      = true
prost.workspace      = true
rand.workspace       = true
tracing.workspace    = true
futures.workspace    = true
metrics.workspace    = true

[dev-dependencies]
tempfile.workspace  = true
tokio               = { version = "1", features = ["full"] }
tracing-subscriber  = "0.3"

[build-dependencies]
tonic-build = "0.12"
