[package]
name = "wal-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone deployable WAL node (Raft + gRPC + HTTP health)"

[[bin]]
name = "wal-server"
path = "src/main.rs"

[dependencies]
wal-replication = { path = "../wal-replication" }
tokio            = { version = "1", features = ["full"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics-exporter-prometheus = "0.15"
clap             = { version = "4", features = ["derive"] }
anyhow           = "1"
metrics          = "0.23"
hyper            = { version = "1", features = ["server", "http1"] }
http-body-util   = "0.1"
hyper-util       = { version = "0.1", features = ["tokio"] }
serde_json       = "1"
tokio-util       = { version = "0.7", features = ["compat"] }
